--- a/LevelUp/app/src/main/AndroidManifest.xml
+++ b/LevelUp/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         android:theme="@style/Theme.LevelUp"
         tools:targetApi="31">
         <activity
+            android:name=".ReplyDiscussion"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ProjectActivity"
             android:exported="false">
             <meta-data
