--- a/LevelUp/app/src/main/AndroidManifest.xml
+++ b/LevelUp/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.a706012110039.levelup">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LevelUp"
         tools:targetApi="31">
+        <activity
+            android:name=".EnrollProject_Activity"
+            android:exported="false" />
         <activity
             android:name=".ReplyDiscussion"
             android:exported="false">
