--- a/LevelUp/app/build.gradle
+++ b/LevelUp/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.3'
 }
