--- a/LevelUp/app/build.gradle
+++ b/LevelUp/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.3'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
+
 }
