--- a/LevelUp/app/src/main/AndroidManifest.xml
+++ b/LevelUp/app/src/main/AndroidManifest.xml
@@ -82,6 +82,9 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
+            android:name=".dontdelete"
+            android:exported="false" />
+        <activity
             android:name=".IntroActivity"
             android:exported="true">
             <intent-filter>
