--- a/LevelUp/app/build.gradle
+++ b/LevelUp/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.3'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 }
