--- a/LevelUp/app/src/main/AndroidManifest.xml
+++ b/LevelUp/app/src/main/AndroidManifest.xml
@@ -4,14 +4,17 @@
     package="com.a706012110039.levelup">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logolvlup"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logolvlup"
         android:supportsRtl="true"
         android:theme="@style/Theme.LevelUp"
         tools:targetApi="31">
